Fixed height issues on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,9 @@ video {
 .hidden {
   display: none;
 }
+.max-h-screen {
+  max-height: 100vh;
+}
 .min-h-screen {
   min-height: 100vh;
 }
